deps: upgrade to Arquillian Graphene 3